# internal/transport/http/middleware/auth.go
@@ -1,0 +1,31 @@
+package middleware
+
+import (
+	"net/http"
+	"strings"
+	"todos-api/internal/usecase/auth"
+
+	"github.com/gin-gonic/gin"
+)
+
+func AuthMiddleware() gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		authHeader := ctx.GetHeader("Authorization")
+
+		if authHeader == "" {
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "missing token"})
+			return
+		}
+
+		tokenString := strings.Split(authHeader, " ")[1]
+
+		uid, err := auth.ParseToken(tokenString)
+		if err != nil {
+			ctx.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+			return
+		}
+
+		ctx.Set("uid", uid)
+		ctx.Next()
+	}
+}
