# internal/transport/http/users/dto.go
@@ -1,0 +1,18 @@
+package users
+
+type createUserRequest struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type userResponse struct {
+	UID   string `json:"uid"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
+
+type updateUserRequest struct {
+	Name  string `json:"name"`
+	Email string `json:"email"`
+}
