# internal/transport/http/users/handler.go
@@ -1,13 +1,12 @@
-package tasks
+package users
 
 import (
 	"errors"
 	"net/http"
+	domain "todos-api/internal/domain/users"
+	usecase "todos-api/internal/usecase/users"
 
 	"github.com/gin-gonic/gin"
-
-	domain "todos-api/internal/domain/tasks"
-	usecase "todos-api/internal/usecase/tasks"
 )
 
 type Handler struct {
@@ -19,53 +18,52 @@ func New(uc usecase.UseCase) *Handler {
 }
 
 // Create godoc
-// @Summary Create task
-// @Description create new task
-// @Tags tasks
+// @Summary Create user
+// @Description create new user
+// @Tags users
 // @Accept json
 // @Produce json
-// @Param input body createTaskRequest true "task"
-// @Success 201 {object} taskResponse
+// @Param input body createUserRequest true "user"
+// @Success 201 {object} userResponse
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
-// @Security BearerAuth
-// @Router /tasks [post]
+// @Router /users [post]
 func (h *Handler) Create(c *gin.Context) {
-	var req createTaskRequest
+	var req createUserRequest
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
 		return
 	}
 
-	task, err := h.uc.Create(c.Request.Context(), req.Title, req.Description)
+	user, err := h.uc.Create(c.Request.Context(), req.Name, req.Email, req.Password)
 	if err != nil {
 		handleError(c, err)
 		return
 	}
 
-	c.JSON(http.StatusCreated, toResponse(task))
+	c.JSON(http.StatusCreated, toResponse(user))
 }
 
 // GetAll godoc
-// @Summary Get all tasks
-// @Description Get all tasks
-// @Tags tasks
+// @Summary Get all users
+// @Description Get all users
+// @Tags users
 // @Produce json
-// @Success 200 {array} taskResponse
+// @Success 200 {array} userResponse
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Security BearerAuth
-// @Router /tasks [get]
+// @Router /users [get]
 func (h *Handler) GetAll(c *gin.Context) {
-	tasks, err := h.uc.GetAll(c.Request.Context())
+	users, err := h.uc.GetAll(c.Request.Context())
 	if err != nil {
 		handleError(c, err)
 		return
 	}
 
-	resp := make([]taskResponse, 0, len(tasks))
-	for _, t := range tasks {
+	resp := make([]userResponse, 0, len(users))
+	for _, t := range users {
 		resp = append(resp, toResponse(t))
 	}
 
@@ -73,87 +71,81 @@ func (h *Handler) GetAll(c *gin.Context) {
 }
 
 // GetByID godoc
-// @Summary Get task by ID
-// @Description Get task by ID
-// @Tags tasks
+// @Summary Get user by ID
+// @Description Get user by ID
+// @Tags users
 // @Produce json
 // @Param id path string true "Task ID"
-// @Success 200 {object} taskResponse
+// @Success 200 {object} userResponse
 // @Failure 400 {object} map[string]string
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Security BearerAuth
-// @Router /tasks/{id} [get]
+// @Router /users/{id} [get]
 func (h *Handler) GetByID(c *gin.Context) {
-	id := c.Param("id")
+	uid := c.Param("id")
 
-	task, err := h.uc.GetByID(c.Request.Context(), id)
+	user, err := h.uc.GetByID(c.Request.Context(), uid)
 	if err != nil {
 		handleError(c, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, toResponse(task))
+	c.JSON(http.StatusOK, toResponse(user))
 }
 
 // Update godoc
-// @Summary Update task
-// @Description Update task
-// @Tags tasks
+// @Summary Update user
+// @Description Update user
+// @Tags users
 // @Accept json
 // @Produce json
-// @Param id path string true "Task ID"
-// @Param input body updateTaskRequest true "task"
-// @Success 200 {object} taskResponse
+// @Param id path string true "User UID"
+// @Param input body updateUserRequest true "user"
+// @Success 200 {object} userResponse
 // @Failure 400 {object} map[string]string
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Security BearerAuth
-// @Router /tasks/{id} [put]
+// @Router /users/{id} [put]
 func (h *Handler) Update(c *gin.Context) {
-	id := c.Param("id")
+	uid := c.Param("id")
 
-	var req updateTaskRequest
+	var req updateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
 		return
 	}
-	err := domain.ValidateStatus(req.Status)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-	}
-
-	task, err := h.uc.Update(
+	user, err := h.uc.Update(
 		c.Request.Context(),
-		id,
-		req.Title,
-		req.Description,
-		domain.Status(req.Status),
+		uid,
+		req.Name,
+		req.Email,
 	)
 	if err != nil {
 		handleError(c, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, toResponse(task))
+	c.JSON(http.StatusOK, toResponse(user))
 }
 
 // Delete godoc
-// @Summary Delete task
-// @Description Delete task
-// @Tags tasks
+// @Summary Delete user
+// @Description Delete user
+// @Tags users
 // @Produce json
-// @Param id path string true "Task ID"
-// @Success 200 {object} taskResponse
+// @Param id path string true "User ID"
+// @Success 200 {object} userResponse
 // @Failure 400 {object} map[string]string
 // @Failure 404 {object} map[string]string
 // @Failure 500 {object} map[string]string
 // @Security BearerAuth
-// @Router /tasks/{id} [delete]
+// @Router /users/{id} [delete]
 func (h *Handler) Delete(c *gin.Context) {
-	id := c.Param("id")
+	uid := c.Param("id")
 
-	if err := h.uc.Delete(c.Request.Context(), id); err != nil {
+	if err := h.uc.Delete(c.Request.Context(), uid); err != nil {
 		handleError(c, err)
 		return
 	}
@@ -161,25 +153,26 @@ func (h *Handler) Delete(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
-func toResponse(t *domain.Task) taskResponse {
-	return taskResponse{
-		ID:          string(t.TID),
-		Title:       t.Title,
-		Description: t.Description,
-		Status:      t.Status,
+func toResponse(t *domain.User) userResponse {
+	return userResponse{
+		UID:   t.UID,
+		Name:  t.Name,
+		Email: t.Email,
 	}
 }
 
 func handleError(c *gin.Context, err error) {
 	switch {
-	case errors.Is(err, domain.ErrTaskNotFound):
+	case errors.Is(err, domain.ErrUserNotFound):
 		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 
-	case errors.Is(err, domain.ErrTaskAlreadyExists):
+	case errors.Is(err, domain.ErrUserAlreadyExists):
 		c.JSON(http.StatusConflict, gin.H{"error": err.Error()})
 
-	case errors.Is(err, domain.ErrEmptyTitle),
-		errors.Is(err, domain.ErrEmptyTID):
+	case errors.Is(err, domain.ErrEmptyEmail),
+		errors.Is(err, domain.ErrEmptyUID),
+		errors.Is(err, domain.ErrEmptyName),
+		errors.Is(err, domain.ErrEmptyPassword):
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 
 	default:
